[package]
name = "mshv-bindings"
version = "0.1.0"
authors = ["Microsoft Authors"]
edition = "2018"
license = "Apache-2.0 OR BSD-3-Clause"

[features]
fam-wrappers = ["vmm-sys-util"]
with-serde = ["serde", "serde_derive"]

[dependencies]
serde = { version = ">=1.0.27", optional = true }
serde_derive = { version = ">=1.0.27", optional = true }
vmm-sys-util = { version = ">=0.2.0", optional = true }
zerocopy = "0.3"
