[package]
name = "mshv-bindings"
version = "0.1.0"
authors = ["Microsoft Authors"]
edition = "2018"
license = "Apache-2.0 OR BSD-3-Clause"

[features]
fam-wrappers = []
with-serde = ["serde", "serde_derive"]

[dependencies]
libc = ">=0.2.39"
serde = { version = ">=1.0.27", optional = true }
serde_derive = { version = ">=1.0.27", optional = true }
vmm-sys-util = ">=0.2.1"

zerocopy = "0.5"

[dev-dependencies]
random-number = "0.1.6"
serde_json = "1.0.64"