[package]
name = "mshv-bindings"
version = "0.3.2"
authors = ["Microsoft Authors"]
edition = "2021"
license = "Apache-2.0 OR BSD-3-Clause"
readme = "README.md"
keywords = ["mshv", "Microsoft", "Hypervisor", "MSHV"]
repository = "https://github.com/rust-vmm/mshv"
description = "Rust FFI bindings to MSHV headers generated using Rust bindgen"

[features]
fam-wrappers = []
with-serde = ["serde", "serde_derive"]

[dependencies]
libc = ">=0.2.39"
num_enum = { version = "0.7", default-features = false }
serde = { version = ">=1.0.27", optional = true }
serde_derive = { version = ">=1.0.27", optional = true }
vmm-sys-util = ">=0.12.1"
zerocopy = { version = "0.8", features = ["derive"] }

[dev-dependencies]
random-number = "0.1.6"
serde_json = "1.0.64"
