[package]
name = "mshv-ioctls"
version = "0.6.7"
authors = ["Microsoft Authors"]
edition = "2021"
license = "Apache-2.0 OR BSD-3-Clause"
readme = "README.md"
keywords = ["mshv", "Microsoft", "Hypervisor", "MSHV"]
repository = "https://github.com/rust-vmm/mshv"
description = "Safe wrappers over MSHV ioctl"

[dependencies]
libc = ">=0.2.39"
mshv-bindings = { version = "=0.6.7", path = "../mshv-bindings", features = [
  "fam-wrappers",
] }
thiserror = "2.0"
vmm-sys-util = ">=0.12.1"
